--- a/scripts/interactive_eval.ipynb
+++ b/scripts/interactive_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-23T07:56:53.097508Z",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-23T07:56:53.108414Z",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-23T07:56:53.132960Z",
@@ -146,8 +146,8 @@
     "photos_df = load_metadata('../metadata/photos.csv')\n",
     "way_sections = load_metadata('../metadata/ways.csv')\n",
     "\n",
-    "# process them to get predictions (demo_workflow.ipynb)\n",
-    "# for demo purposes, we will use our LLM predictions"
+    "# process them to get predictions (e.g. demo_workflow.ipynb)\n",
+    "# we will use our existing LLM predictions"
    ]
   },
   {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-23T07:56:53.153713Z",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-23T07:56:53.170306Z",
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "# pred_df = '...load your predictions dataframe'\n",
-    "pred_df = pd.read_csv('../metadata/pipeline_predictions.csv')"
+    "pred_df = pd.read_csv('../metadata/claude_3.5sonnet_predictions.csv')"
    ]
   },
   {
@@ -212,7 +212,7 @@
    },
    "outputs": [],
    "source": [
-    "pred_eval_df = eval_map_feature_pred(gt_gdf, pred_df, MapFeatures.ONEWAY)"
+    "pred_eval_df = eval_map_feature_pred(gt_gdf, pred_df, MapFeatures.LANES)"
    ]
   },
   {
@@ -246,7 +246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "automapper",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
