--- a/demo_utils/demo_notebook.ipynb
+++ b/demo_utils/demo_notebook.ipynb
@@ -38,6 +38,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example on how to generate map feature tags for a way\n",
+    "this approach is used for each way to map everything"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## describe what the next section contains"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -266,6 +283,8 @@
    "source": [
     "ways_df = load_metadata('../metadata/ways.csv')\n",
     "photos_df = load_metadata('../metadata/photos.csv')\n",
+    "\n",
+    "# example way id for which we want to extract map attributes from a sequence of photos collected along the way\n",
     "osm_id_example = 1329887723"
    ]
   },
@@ -652,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
