change naming and add description

--- a/demo_utils/demo_notebook.ipynb
+++ b/demo_utils/demo_notebook.ipynb
@@ -380,6 +380,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load metadata"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -390,6 +397,13 @@
     "\n",
     "# example osm id for which we want to extract map attributes from a sequence of images collected along the way\n",
     "osm_id_example = 1329887723"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict"
    ]
   },
   {
