--- a/evaluation_utils/interactive_eval_notebook.ipynb
+++ b/evaluation_utils/interactive_eval_notebook.ipynb
@@ -158,8 +158,8 @@
    "outputs": [],
    "source": [
     "gt_csv = pd.read_csv('../metadata/ground_truth.csv')\n",
-    "way_sections = load_metadata('../metadata/ways.csv')\n",
-    "gt_gdf = gpd.GeoDataFrame(gt_csv.merge(way_sections, on='osmid'), geometry='geometry', crs='EPSG:4326')"
+    "ways_df = load_metadata('../metadata/ways.csv')\n",
+    "gt_gdf = gpd.GeoDataFrame(gt_csv.merge(ways_df, on='osmid'), geometry='geometry', crs='EPSG:4326')"
    ]
   },
   {
